trying to fix blank page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://myusername.github.io/my-app",
+    "homepage": "https://myusername.github.io/",
     "name": "emilus",
     "version": "2.0.1",
     "private": true,
